# mlitchi

./: .gitignore  README.org  deps.edn  pyproject.toml
clojure/: deps.edn  dev.sh  mlitchi-config.edn
clojure/dev/: dev.clj
clojure/src/mlitchi/: azure.clj  config.clj  core.clj  deepseek.clj  gemini.clj  jvm_utils.clj  ollama.clj  playwright.clj  protocols.clj  py.clj
clojure/src/mlitchi/gemini/: helpers.clj  types.clj
clojure/src/repl/: core.clj
mlitchi/: __init__.py  hf.py  pod.py  spacy_helpers.py  transformers_helpers.py
python/: Makefile  pod.py  pyproject.toml
python/mlitchi/: cache.py  hfhub_helpers.py  spacy_helpers.py  transformers_helpers.py
src/mlitchi/: core.clj
