[tool.poetry]
name = "mlitchi"
version = "0.1.0"
description = ""
authors = ["Ravindra Jaju <jaju@msync.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pylaagu = {git = "https://github.com/jaju/pylaagu.git"}
huggingface-hub = "^0.23.3"
bcoding = "^1.5"
spacy = "^3.7.5"
jsonpickle = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
