[project]
name = "mlitchi"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Ravindra Jaju <jaju@msync.org>"]
requires-python = ">=3.12"
dependencies = [
    "bcoding>=1.5",
    "browser-use>=0.1.40",
    "google-genai>=1.7.0",
    "huggingface-hub>=0.29.3",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "jsonpickle>=4.0.2",
    "jupyterlab>=4.3.6",
    "langchain-openai>=0.3.1",
    "loguru>=0.7.3",
    "mlx-lm>=0.22.2",
    "openai>=1.68.2",
    "pip>=25.0",
    "platformdirs>=4.3.6",
    "pylaagu",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.2",
    "spacy>=3.8.4",
    "torch>=2.6.0",
    "transformers>=4.50.0",
]

[tool.uv.sources]
pylaagu = { git = "https://github.com/jaju/pylaagu.git" }
en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[tool.pyright]
venvPath = "."
venv = ".venv"
